--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(III_term)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(main.cpp main.cpp task_3.cpp task_4.cpp)
+add_executable(main.cpp main.cpp task_3.cpp task_4.cpp task_2.cpp)
 add_executable(task_1.cpp task_1.cpp)
 add_executable(task_3.cpp task_3.cpp)
 add_executable(task_4.cpp task_4.cpp)
+add_executable(task_2.cpp task_2.cpp)
