--- a/homework_5/CMakeLists.txt
+++ b/homework_5/CMakeLists.txt
@@ -6,3 +6,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(task_2 task_2_Vector.cpp task_2_Vector.h task_2.cpp)
 add_executable(task_3 task_3_physics.cpp task_3_physics.h task_3.cpp)
+add_executable(task_4.cpp task_4.cpp task_4_error_1.cpp task_4_error_1.h)
+add_executable(task_4_2.cpp task_4_2.cpp task_4_error_2.cpp task_4_error_2.h)
+add_executable(lec_9_10_21.cpp lec_9_10_21.cpp)
