--- a/homework_6/CMakeLists.txt
+++ b/homework_6/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 
 add_executable(task_1 task_1_main.cpp task_1.cpp task_1.h)
+add_executable(task_2 task_2_fraction.cpp task_2_operation.cpp task_2_operation.h)
