--- a/homework_9/CMakeLists.txt
+++ b/homework_9/CMakeLists.txt
@@ -4,3 +4,4 @@ project(III_term)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(merge_sort task_1.cpp)
+add_executable(Vector Vector.cpp task_2.h task_2.cpp)
